fix overflows in divs

--- a/src/components/Dashboard/DashboardItems.css
+++ b/src/components/Dashboard/DashboardItems.css
@@ -1,7 +1,7 @@
 .dashboard-item {
   min-width: 200px;
   min-height: 100px;
-  max-height: 300px;
+  max-height: 40vh;
   align-content: center;
   padding-bottom: 10px;
 }
